--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 /* # ID | . CLASS */
-@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&family=Plus+Jakarta+Sans:wght@400;600&display=swap');
 * { /* resetar o style */ /*deixa o site centralizado */
     padding: 0; /* nós que iremos configurar os paddings */
     margin: 0;
@@ -8,7 +7,7 @@
 
 /* MENU  */
 #menu-container {
-    background-color: #530b0b;
+    background-color: #ffffff;
     height: 60px;
     display: flex;
     justify-content: space-between;
@@ -29,6 +28,7 @@
 .menu-text {
     text-decoration: none;
     font-family: 'Plus Jakarta Sans', sans-serif;
+    font-weight: 600;
     font-size: 13px;
     color: black;
     padding: 10px 15px 10px 15px;
@@ -67,19 +67,93 @@
     color: rgb(255, 255, 255);
 }
 
+.menu-buttom1:hover,.menu-buttom2:hover{
+    background-color: #5e2cc2;
+}
+
 
 /* BANNER */
 .banner-container {
-    background-color: rgb(122, 97, 97);
-    justify-items: center;
+    background-image: url(images/fundo-banner.png);
+    background-size: cover;
+    background-repeat: no-repeat; /* Evita que a imagem seja repetida */
+    background-attachment:local;
+    background-position: center;
 
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 250px;
+    height: 100%;
+    width: auto;
+    margin: 0px 10px auto;
+    position: relative;
+    min-height: 80%;
+}
+
+#banner-text {
+    width: 50%;
+    min-width: 300px;
 }
 
 #banner-img {
-    padding: 0px;
-    margin: 0px;
+    width: 45%;
+    min-width: 300px; 
+
+}
+
+/* CONTEUDO */
+
+.destaques-container {
+    padding: 0px 80px;
+}
+
+.title-section {
+    padding: 50px 0px 20px 0px;
+}
+
+.titulos {
     display: flex;
-    width: 98%;
-    border-radius: 30px;
-   
+    font-family: 'Mochiy Pop One', sans-serif;
+    color: #4007B0;
+    font-size: 1.25em ;  
+    padding-bottom: 5px;  
+}
+
+.subtitulos {
+    font-family: 'Plus Jakarta Sans', sans-serif;
+    font-weight: 400;
+    color: #F37DC7;
+    display: flex;
+    font-size: 0.98em;
+}
+
+.options-container {
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+    padding: 0px 10%;
+    flex-wrap: wrap;
+    
+}
+.option {
+    display: flex;
+    background-color: rgb(253, 253, 253);
+}
+
+.op-content {
+    padding: 20px;
+}
+
+.op-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.buy-buttom {
+    border: 0px;
+    border-radius: 16px;
+    padding: 12px 15px 10px 15px;
+    background-color: #450EB0;
 }
