--- a/style.css
+++ b/style.css
@@ -75,48 +75,18 @@
 
 
 /* BANNER */
-.ban-con-1 {
-    background-image: url(images/fundo-banner1.png);
-    background-size: cover;
-    background-repeat: no-repeat; /* Evita que a imagem seja repetida */
-    background-attachment:local;
-    background-position: center;
-
+.banner {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding: 0px 250px;
-    height: 100%;
-    width: auto;
-    position: relative;
-    min-width: 60%;
-}
-
-#banner-text {
-    width: 50%;
-}
-
-#banner-img {
-    height: 72%;
-    min-width: 50%;
-}
-
-.ban-con-2 {
-    background-image: url(images/fundo-banner2.png);
-    background-size: cover;
-    background-repeat: no-repeat; /* Evita que a imagem seja repetida */
-    background-attachment:local;
-    background-position: center;
-
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+    width: 100%;
+    justify-content: center;
 
 }
 
-.menino-ban2 {
-    height: 400px;
+.banner img{
+    width: 100%;
 }
+
 
 /* DESTAQUES */
 
@@ -139,7 +109,7 @@
     display: flex;
     font-family: 'Mochiy Pop One', sans-serif;
     color: #4007B0;
-    font-size: 1.25em ;
+    font-size: 1.40em ;
     padding-bottom: 5px;  
 }
 
@@ -148,7 +118,7 @@
     font-weight: 400;
     color: #F37DC7;
     display: flex;
-    font-size: 0.98rem;
+    font-size: 1rem;
 }
 
 .options-container {
@@ -172,7 +142,6 @@
 }
 
 .options-img {
-    width: 20em; 
     border-radius: 2%;
 }
 
@@ -186,6 +155,10 @@
 
 .op-text {
     color: #000;
+}
+
+.op-img img{
+    height: 380px;
 }
 
 .buy-buttom {
@@ -212,7 +185,7 @@
     min-height: 30%;
 }
 
-p, h1, h2, h3, a {
+p, h1, h2, h3, a, label {
     font-family: 'Plus Jakarta Sans', sans-serif;
     text-decoration: none;
 }
@@ -281,20 +254,23 @@ p, h1, h2, h3, a {
 
 /* Product page */
 .imagens-product{
-    padding-right: 20px;
+    padding-right: 27px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
+.product-container {
+    padding: 1% 8% 0%;
+}
 .tam-img {
-   
+    padding: 15px 0px 15px 0px;
     width: 100px;
    
 }
 
 .tam-img img{
-   
+    border-radius: 7%;
     width: 100%;
     object-fit: cover;
 }
@@ -307,12 +283,91 @@ p, h1, h2, h3, a {
     display: flex;
 }
 
+.product-text-container {
+    display: flex;
+    padding: 0% 2%;
+}
+
+.options-product{
+    padding-top: 3%;
+}
+
+.section-text {
+    padding-top: 1.3%;
+    padding-bottom: 0.6%;
+    font-size: 1.20rem;
+    font-weight: 600;
+}
+
+.options-product label{
+    font-size: 1rem;
+}
+
+
 .principal-img {
     width: 510px;
-    
+}
+
+.principal-img img{
+    border-radius: 3%;
 }
 
 .principal-img img {
     width: 100%;
     
+}
+
+.section-product {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.text-product {
+    height: 70%;
+}
+.info-product h1{
+    font-size: 2rem;
+    color: #3700A3;
+
+}
+.text-p{
+    padding-top: 3%;
+}
+
+.descrition-product {
+    font-size: 1.2rem;
+    color: #3f3f3f;
+}
+
+.espec-product {
+    font-size: 0.99rem;
+    color: #8462c4;
+}
+
+.continuar-compra {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.valor{
+    padding: 15px;
+}
+
+.adicionar {
+    padding: 15px;
+}
+
+.botao-principal{
+    background-color: #450EB0;
+    color: white;
+    text-decoration: none;
+    border: 0px;
+    padding: 25px;
+    border-radius: 7%;
+    font-weight: 600;
+    font-family: 'Plus Jakarta Sans', sans-serif;
+    font-size: 1rem;
 }
