--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@
     height: 380px;
 }
 
-.buy-buttom {
+.buttom {
     border: 0px;
     border-radius: 16px;
     padding: 12px 15px 10px 15px;
