--- a/style/style.css
+++ b/style/style.css
@@ -107,12 +107,12 @@ p, h1, h2, h3, h4, h5, h6, a, label {
     font-weight: 600;
 }
 
-.buttom:hover, .buttom-product:hover {
+.buttom:hover, .buttom-product, .buttonAlert:hover {
     transform:scale(1.1);
     transition: transform 100ms;
 }
 
-.buttom, .buttom-product:active {
+.buttom, .buttom-product, .buttonAlert:active {
     background-color: #5f22d8;
 }
 
@@ -281,6 +281,7 @@ p, h1, h2, h3, h4, h5, h6, a, label {
     font-weight: 600;
 }
 
+
 .product-container {
     padding: 1% 8% 0%;
 }
@@ -315,15 +316,16 @@ p, h1, h2, h3, h4, h5, h6, a, label {
     font-size: 18px;
 }
 
-.quntd-p input{
-    width: 50px;
+.quntd-p input, .qtd-carrinho input{
+    width: 30px;
     font-size: 15px;
-    padding: 10px 0px;
-    border-radius: 15px;
+    padding: 8px 0px;
+    border-radius: 10px;
     border: 2px solid rgb(149, 73, 236);
     text-align: center;
     padding-left: 15px;
 }
+
 .product-container {
     display: flex;
 }
@@ -356,13 +358,6 @@ p, h1, h2, h3, h4, h5, h6, a, label {
     display: flex;
     flex-direction: row;
     align-items: center;
-}
-
-.qntd-button{
-    border-radius: 3px;
-    border: 0px;
-    padding: 8px;
-    background-color: #a055ff;
 }
 
 .quantidade {
@@ -480,6 +475,40 @@ p, h1, h2, h3, h4, h5, h6, a, label {
 }
 
 
+.alert{
+    background-color: white;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 70px;
+    border-radius: 5px;
+
+    font-size: 1.1rem;
+    font-weight: 600;
+    font-family: 'Plus Jakarta Sans', sans-serif;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    box-shadow: 2px 2px 180px rgba(0, 0, 0, 0.336);
+}
+
+
+.buttonAlert{
+    border: 0px;
+    color: white;
+    border-radius: 2px;
+    padding: 15px;
+    background-color: #450EB0;
+    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.15);
+    font-size: 0.9rem;
+    font-weight: 600;
+    font-family: 'Plus Jakarta Sans', sans-serif;
+    margin: 10px;
+    width: fit-content;
+}
 
 .more-infos-carrinho {
     display: flex;
