--- a/style/style.css
+++ b/style/style.css
@@ -125,7 +125,7 @@ p, h1, h2, h3, h4, h5, h6, a, label, form {
     display: flex;
     justify-content: center;
     margin-top: 3%;
-    background-color: #C36AED;
+    background-color: #7F3FFF;
 }
 
 #rodape-container p {
